# thaiwordseg

./: README.md
Wordcut/Wordcut/: AUTHORS  ChangeLog
Wordcut/Wordcut/template/: comment.txt  comment_tail.txt
Wordcut/template/: comment_head.txt
kfair/wordcut/: Makefile.am  acinclude.m4  autogen.sh  configure.in
kfair/wordcut/data/: dict.txt  wordunit.rul
kfair/wordcut/example/: test1.c
kfair/wordcut/include/wordcut/: Makefile.am  wcpath.h.in  wcsplit.h  wcstring.h  wcwordunit.h
kfair/wordcut/src/: Makefile.am  wcdict.c  wcwordcut.c  wcwordunit.c
kfair/wordcut/src/.deps/: wcdict.Plo  wcdictmap.Plo  wcwordcut.Plo  wcwordcut.Po  wcwordunit-wcwordunit.Po  (+1 more)
kfair/wordcut/test/: Makefile.am  test_pos.c  test_wordunit.c
kfair/wordcut/test/.deps/: test_dictmap-test_dictmap.Po  test_pos-test_pos.Po  test_pos.Po  test_wordunit-test_wordunit.Po  test_wordunit.Po
kfair/wordcut/test/.libs/: lt-test_dictmap  lt-test_pos  lt-test_wordunit  test_dictmap  test_pos  test_wordunit
ruby-wcdict/: Makefile  README  extconf.rb  wcdict.c
ruby-wcdict/test/: bas2.etd  test.rb  test2.rb  test3.rb  test4.rb  test5.rb
ruby-wcthaitokenizer/: Makefile  extconf.rb  wcthaitokenizer.c
ruby-wcthaitokenizer/test/: test1.rb
siambound/: build.xml
siambound/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
siambound/nbproject/private/: private.properties
test-wordcut/: cli.rb  wordcut.rb
v3/bkidxgen/: Makefile.am  configure.ac
v3/bkidxgen/src/: Makefile.am  bigrams.c  bigrams.h  bkidxgen.c
v3/latexparser/: Makefile.am  configure.in  latexparser.pc.in
v3/latexparser/data/: Makefile.am  Makefile.in  lsh.tex
v3/latexparser/include/: Makefile.am
v3/latexparser/src/: Makefile.am  latex.l  latexecho.c  latexparser.c
v3/ruby-latexparser/: extconf.rb  latexparser.c
v3/ruby-latexparser/test/: test.rb
v3/ruby-wordcut/: Makefile  README  dist.sh  extconf.rb  ruby-wordcut.spec  ruby_wcdict.c  ruby_wcsplit.c  ruby_wcwordcut.c  ruby_wcwordunit.c  ruby_wordcut.h  wordcut.c
v3/wordcut/: AUTHORS  ChangeLog  Makefile.am  README  TODO  Thanks  autogen.sh  configure  configure.ac  configure.in  wordcut.pc.in  wordcut.spec.in
v3/wordcut-cli/: AUTHOR  install.rb  wordcut.rb
v3/wordcut/data/: Makefile.am  dict.etd
v3/wordcut/doc/: Makefile.am  wordcut.th.tex
v3/wordcut/example/: Makefile.am  example.mk  test1.c  wcdict_ex.c  wcdictiter_ex.c  wcdictiterpos_ex.c  wcdictmap_ex.c  wcwordcut_ex.c  wcwordunit_ex.c  wcwordunit_ex2.c
v3/wordcut/include/: Makefile  Makefile.am  Makefile.in
v3/wordcut/include/wordcut/: Makefile  Makefile.am  Makefile.in  wccommon.h  wcdict.h  wcdictmap.h  wcpath.h  wcwordcut.h  wcwordunit.h
v3/wordcut/manual/: Makefile  acknownledge.th.tex  algorithm.th.tex  arch.eps  autottex.sh  cpe.bst  design.th.tex  project.bib  ref_c_api_basic.th.tex  ref_c_api_dict.th.tex  ref_c_api_wordcut.th.tex  ref_c_api_wu.th.tex  wordcut.tex  wordcut.th.tex
v3/wordcut/src/: Makefile.am  wcdict.c  wcdictmap.c  wcwordcut.c  wcwordunit.c  wordcut.c
v3/wordcut/src/encoder/: Makefile.am  charcoder.c  posarray.c  posarray.h  strcoder.c  trie.c  trienode.c  wcencoder.c
v3/wordcut/src/util/: Makefile.am  wcsplit.c  xmalloc.c
v3/wordcut/test/: Makefile.am  path.h.in  test_dictmap.c  test_pos.c  test_wordcut.c
v4/pywordcut/: pywordcut.c  setup.py
v4/wordcut/: COPYING  ChangeLog  Makefile.am  configure  configure.ac
v4/wordcut/data/: Makefile.am  tdict.wcd
v4/wordcut/docs/: Makefile.am  manual.sxw
v4/wordcut/example/: Makefile  example.c
v4/wordcut/wordcut/: Makefile.am  path.h.in  wordcut.c  wordcut.h  wordcut_cli.c  wordcut_dict.c  wordcut_dict.h  wordcut_dict_dump.c  wordcut_list.c  wordcut_list.h  wordcut_mkdict.c  wordcut_rule_prepare.c  xmalloc.c  xmalloc.h
v4/wordcut/wordcut/.deps/: wordcut_mkdict.Po
wc2/: Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.in  libtool  wordcut.pc  wordcut.pc.in
wc2/autom4te-2.53.cache/: output.0  requests  traces.0
wc2/autom4te.cache/: output.0  traces.0
wc2/doc/: note.txt
wc2/include/: Makefile  Makefile.in
wc2/include/wordcut/: Makefile  Makefile.am  Makefile.in  path.h  path.h.in  wccommon.h  wcdict.h
wc2/src/: Makefile  Makefile.am  Makefile.in  libwordcut.la  libwordcut.lo  wcdict.c  wcwordcut
wc2/src/.deps/: libwordcut.P  wcdict.P  wcstring.P  wcstring.Plo
wc2/src/.libs/: libwordcut.lai  libwordcut.so.0.0.0
wc2/src/encoder/: Makefile  Makefile.am  Makefile.in  charcoder.c  charcoder.d  cscope.out  dictionary.d  posarray.d  st.c  strcoder.d  temp.yomz  trie.d  trie.h  trienode.d  trienode.h  wcencoder  wcencoder.c  wcencoder.d
wc2/src/encoder/.deps/: charcoder.P  charcoder.Po  dictionary.P  dictionary.Po  posarray.P  posarray.Po  strcoder.P  strcoder.Po  trie.P  trie.Po  trienode.P  trienode.Po  wcencoder.P  wcencoder.Po
wc2/src/util/: Makefile  Makefile.in  libwordcututil.la  wcstring.lo
wc2/src/util/.deps/: wcstring.P
wc2/src/util/.libs/: libwordcututil.al
wcdict/: Makefile.am  NEWS  autogen.sh  configure.in
wcdict/data/: Makefile.am
wcdict/example/: Makefile.am  Makefile.in  example.mk  test1.c
wcdict/include/wordcut/: Makefile.am  wccommon.h  wcdict.h
wcdict/src/: .Makefile.am.swp  Makefile.am  wcdict.c  wcunit.c
wcdict/src/encoder/: dictionary.h
wcdict/src/util/: Makefile.am
wcdict/test/: Makefile.am  Makefile.in  test_pos.c
wcthaitokenizer/: Makefile.am  configure.in  wcthaitokenizer.pc.in
wcthaitokenizer/include/wordcut/: Makefile.am  wcthaitokenizer.h
wcthaitokenizer/src/: Makefile.am  wcthaitokenizer.c
wi/: Makefile  Makefile.am  Makefile.in  a.out  config.status  configure  configure.in  decode.c  en  encode.c  encoder  foo.txt  sortdict  sortdict.c  test5.out  test5.txt  wicommon.h  widecode  wiencode  wiwordcut  wiwordcut.c  wiwordcut.h  wiwordcutcli.c  wiwordcutcli.c~  wordcut.c
wi/.deps/: decode.Po  encode.Po  wordcut.Po
wi/autom4te-2.53.cache/: output.0  traces.0
wordcut/: build.xml
wordcut/script/: package.sh
wordcut_gui/: wordcut_gui.glade  wordcut_gui.gladep  wordcut_gui.rb
(+85 files in other folders)
