dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/wcthaitokenizer.c)
AM_INIT_AUTOMAKE(wcthaitokenizer,0.1.0)
AC_SUBST(VERSION)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AM_PROG_LIBTOOL
AC_PATH_PROG(PKG_CONFIG,[pkg-config],no)
if test "$PKG_CONFIG" = "no"; then
	AC_MSG_ERROR([pkg-config is needed.])
fi
#AC_PATH_PROG(RUBY,[ruby],no)
#if test "$RUBY" = "no"; then
#	AC_MSG_ERROR([ruby is needed])
#fi


dnl Checks for libraries.


dnl Checks for header files.
#AC_STDC_HEADERS
AC_HAVE_HEADERS(string.h)

dnl Checks for typedefs, structures, and compiler characteristics.
#AC_C_CONST

dnl Checks for library functions.
#AC_FUNC_ALLOCA
AC_OUTPUT(Makefile 
	src/Makefile 
	include/Makefile 
	include/wordcut/Makefile 
	wcthaitokenizer.pc)
